--- a/termos.html
+++ b/termos.html
@@ -17,7 +17,8 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+
+  <body id="termos">
     <header class="header-bg">
       <div class="header container">
         <a href="./">
