--- a/bicicletas.html
+++ b/bicicletas.html
@@ -75,7 +75,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href=".bicicletas/nimbus.html">Mais Sobre</a>
+          <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
         </div>
       </div>
 
@@ -110,7 +110,7 @@
                 Rastreador
               </li>
             </ul>
-            <a class="botao seta" href=".bicicletas/magic.html">Mais Sobre</a>
+            <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href=".bicicletas/nebula.html">Mais Sobre</a>
+          <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
         </div>
       </div>
     </main>
