--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,10 +8,9 @@
     <meta name="description" content="Termos e Condições" />
     <title>Bicicletas | Bikcraft</title>
 
+    <link rel="preload" href="./css/styles.css" as="style" />
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
@@ -22,7 +21,7 @@
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" alt="Bikcraft" />
+          <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         </a>
 
         <nav aria-label="primaria">
@@ -47,14 +46,14 @@
 
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
+          <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta" />
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl">Nimbus Stark</h2>
           <p class="font-2-s cor-8">
-            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe.
-            Ela vem equipada com os melhores acessórios, o que garante maior
+            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+            vem equipada com os melhores acessórios, o que garante maior
             velocidade.
           </p>
           <ul class="font-1-m cor-8">
@@ -82,7 +81,7 @@
       <div class="bicicletas-bg">
         <div class="bicicletas container">
           <div class="bicicletas-imagem">
-            <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta" />
+            <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta" />
             <span class="font-2-m cor-0">R$ 2499</span>
           </div>
           <div class="bicicletas-conteudo">
@@ -117,14 +116,14 @@
 
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+          <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta" />
           <span class="font-2-m cor-0">R$ 3999</span>
         </div>
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl">Nebula Cosmic</h2>
           <p class="font-2-s cor-8">
-            A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe.
-            Ela vem equipada com os melhores acessórios, o que garante maior
+            A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela
+            vem equipada com os melhores acessórios, o que garante maior
             velocidade.
           </p>
           <ul class="font-1-m cor-8">
@@ -152,7 +151,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contato">
           <h3 class="font-2-l-b cor-0">Contato</h3>
           <ul class="font-2-m cor-5">
@@ -165,13 +164,13 @@
           </ul>
           <div class="footer-redes">
             <a href="./">
-              <img src="./img/redes/instagram.svg" alt="Instagram" />
+              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" alt="Facebook" />
+              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
             </a>
           </div>
         </div>
