--- a/orcamento.html
+++ b/orcamento.html
@@ -8,10 +8,9 @@
     <meta name="description" content="Termos e Condições" />
     <title>Orçamento | Bikcraft</title>
 
+    <link rel="preload" href="./css/styles.css" as="style" />
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
@@ -22,7 +21,7 @@
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" alt="Bikcraft" />
+          <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         </a>
 
         <nav aria-label="primaria">
@@ -58,50 +57,74 @@
           <div class="orcamento-conteudo" id="orcamento-bikcraft">
             <h2 class="font-1-xs cor-5">Escolha a sua</h2>
 
-            <input type="radio" name="produto" value="nimbus" id="nimbus">
+            <input type="radio" name="produto" value="nimbus" id="nimbus" />
             <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs cor-8">
-                <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-                <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-                <li><img src="./img/icones/velocidade.svg" alt=""> 50 km/h</li>
-                <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+                <li>
+                  <img src="./img/icones/eletrica.svg" alt="" /> Motor Elétrico
+                </li>
+                <li>
+                  <img src="./img/icones/carbono.svg" alt="" /> Fibra de Carbono
+                </li>
+                <li>
+                  <img src="./img/icones/velocidade.svg" alt="" /> 50 km/h
+                </li>
+                <li>
+                  <img src="./img/icones/rastreador.svg" alt="" /> Rastreador
+                </li>
               </ul>
-              <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+              <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta" />
             </div>
 
-            <input type="radio" name="produto" value="magic" id="magic">
+            <input type="radio" name="produto" value="magic" id="magic" />
             <label for="magic">Magic Might <span>R$ 2499</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs cor-8">
-                <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-                <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-                <li><img src="./img/icones/velocidade.svg" alt=""> 45 km/h</li>
-                <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+                <li>
+                  <img src="./img/icones/eletrica.svg" alt="" /> Motor Elétrico
+                </li>
+                <li>
+                  <img src="./img/icones/carbono.svg" alt="" /> Fibra de Carbono
+                </li>
+                <li>
+                  <img src="./img/icones/velocidade.svg" alt="" /> 45 km/h
+                </li>
+                <li>
+                  <img src="./img/icones/rastreador.svg" alt="" /> Rastreador
+                </li>
               </ul>
-              <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+              <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta" />
             </div>
 
-            <input type="radio" name="produto" value="nebula" id="nebula">
+            <input type="radio" name="produto" value="nebula" id="nebula" />
             <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
             <div class="orcamento-detalhes">
               <ul class="font-1-xs cor-8">
-                <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-                <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-                <li><img src="./img/icones/velocidade.svg" alt=""> 40 km/h</li>
-                <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+                <li>
+                  <img src="./img/icones/eletrica.svg" alt="" /> Motor Elétrico
+                </li>
+                <li>
+                  <img src="./img/icones/carbono.svg" alt="" /> Fibra de Carbono
+                </li>
+                <li>
+                  <img src="./img/icones/velocidade.svg" alt="" /> 40 km/h
+                </li>
+                <li>
+                  <img src="./img/icones/rastreador.svg" alt="" /> Rastreador
+                </li>
               </ul>
-              <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+              <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta branca" />
             </div>
           </div>
 
           <div class="orcamento-conteudo" id="orcamento-seguro">
             <h2 class="font-1-xs cor-5">Escolha o plano</h2>
 
-            <input type="radio" name="produto" value="prata" id="prata">
+            <input type="radio" name="produto" value="prata" id="prata" />
             <label for="prata">Prata <span>R$ 199</span></label>
 
-            <input type="radio" name="produto" value="ouro" id="ouro">
+            <input type="radio" name="produto" value="ouro" id="ouro" />
             <label for="ouro">Ouro <span>R$ 299</span></label>
           </div>
         </div>
@@ -160,7 +183,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contato">
           <h3 class="font-2-l-b cor-0">Contato</h3>
           <ul class="font-2-m cor-5">
@@ -173,13 +196,13 @@
           </ul>
           <div class="footer-redes">
             <a href="./">
-              <img src="./img/redes/instagram.svg" alt="Instagram" />
+              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" alt="Facebook" />
+              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
             </a>
           </div>
         </div>
