--- a/seguros.html
+++ b/seguros.html
@@ -8,10 +8,9 @@
     <meta name="description" content="Termos e Condições" />
     <title>Seguros | Bikcraft</title>
 
+    <link rel="preload" href="./css/styles.css" as="style" />
     <link rel="stylesheet" href="./css/styles.css" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
@@ -22,7 +21,7 @@
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" alt="Bikcraft" />
+          <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         </a>
 
         <nav aria-label="primaria">
@@ -142,38 +141,68 @@
       <dl>
         <div>
           <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
         <div>
           <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
         <div>
           <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
         <div>
           <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
         <div>
           <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
         <div>
           <dt class="font-1-m-b">Quantas trocas posso fazer ano ano?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
         <div>
-          <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
-          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+          <dt class="font-1-m-b">
+            Qual Bikcraft devo escolher para o meu tamanho?
+          </dt>
+          <dd class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, Elo
+            e American Express. Para pagamentos à vista também aceitamos PIX e
+            Boleto através do PagSeguro.
+          </dd>
         </div>
       </dl>
     </article>
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contato">
           <h3 class="font-2-l-b cor-0">Contato</h3>
           <ul class="font-2-m cor-5">
@@ -186,13 +215,13 @@
           </ul>
           <div class="footer-redes">
             <a href="./">
-              <img src="./img/redes/instagram.svg" alt="Instagram" />
+              <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
             </a>
             <a href="./">
-              <img src="./img/redes/facebook.svg" alt="Facebook" />
+              <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
             </a>
             <a href="./">
-              <img src="./img/redes/youtube.svg" alt="Youtube" />
+              <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
             </a>
           </div>
         </div>
