Implementacao: JS, HTML e CSS

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+
+    <script>document.documentElement.classList.add('js');</script>
   </head>
 
   <body id="bicicletas">
@@ -190,5 +190,7 @@
         </p>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
